Fixed displaying of long values in the table. (#322)

--- a/frontend/app/assets/css/bootstrap/less/tables.less
+++ b/frontend/app/assets/css/bootstrap/less/tables.less
@@ -477,7 +477,8 @@ table {
                width: 120px;
                 overflow: hidden;
                 text-overflow: ellipsis;
-                white-space: nowrap; 
+                white-space: normal;
+                word-wrap: break-word;
                 &.table-loader {
                    width: auto;
                 }
